test/grammar/schema/type/type_fail_6/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:7:15
  |
7 |     "cards": {"error": "error"}
  |               ^ expected int, got str(error)
  |
 --> ${CWD}/main.k:3:5
  |
3 |     cards: {str:int}
  |     ^ variable is defined here, its type is int, but got str(error)
  |
error[E2G22]: TypeError
 --> ${CWD}/main.k:7:5
  |
7 |     "cards": {"error": "error"}
  |     ^ expected {str:int}, got {str(error):str(error)}
  |
 --> ${CWD}/main.k:3:5
  |
3 |     cards: {str:int}
  |     ^ variable is defined here, its type is {str:int}, but got {str(error):str(error)}
  |